--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ android {
 }
 
 dependencies {
+    implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.1.0")
     implementation("com.google.firebase:firebase-firestore-ktx")
     implementation platform('com.google.firebase:firebase-bom:32.2.0')
     implementation 'com.squareup.picasso:picasso:2.8'
